--- a/index.html
+++ b/index.html
@@ -4,8 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spicy Spice</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+    <style>
+        /*
+            Primary: #FFA200
+            Secondary: #007BFF
+        */
+        body {
+            margin: 0;
+            font-family: 'Roboto', sans-serif;
+        }
+
+        #main {
+            width: 95%;
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        img {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            display: block;
+            margin: auto;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        }
+
+        p {
+            font-size: 1.4em;
+            margin: 0;
+            margin-top: 14px;
+        }
+
+        #card {
+            width: 95%;
+            margin-top: 60px;
+            padding: 14px;
+            border-radius: 4px;
+            background: #fff;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+            text-align: center;
+        }
+
+        a {
+            display: block;
+            background: #FFA200;
+            color: #fff;
+            padding: 20px 0;
+            margin: 10px;
+            width: 100%;
+            text-align: center;
+            text-decoration: none;
+            font-size: 1.4em;
+            font-weight: bold;
+            border-radius: 4px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        }
+
+        #space {
+            height: 90px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div id="main">
+        <div id="card">
+            <img src="logo.jpg" />
+            <p>@spicyspice.id</p>
+        </div>
+        <div id="space"></div>
+        <a href="#">Line</a>
+        <a href="#">Whatsapp</a>
+    </div>
 </body>
 </html>
