--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <p>@spicyspice.id</p>
         </div>
         <div id="space"></div>
-        <a href="#">Line</a>
-        <a href="#">Whatsapp</a>
+        <a href="https://lin.ee/3Sy8rSNrp">Line</a>
+        <a href="https://wa.me/6289615715589?text=Hello Spicy Spice,%0D%0Ainfo pemesanan?">Whatsapp</a>
     </div>
 </body>
 </html>
